# libmcraw

./: .gitignore  CMakeLists.txt  README.md
lib/: RawData.cpp
samples/: export_audio.c  metadata.c
